<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_phone_et"
        style="@style/CommentEditStyle"
        android:hint="@string/please_input_phone"
        android:inputType="phone" />
    <View style="@style/DividerHorizontalLine" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/input_verify_et"
        style="@style/CommentEditStyle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/please_input_verify_code"
        />
        <View
           style="@style/DividerVerticalLine"
            android:layout_marginTop="@dimen/w20"
            android:layout_marginBottom="@dimen/w20"/>
        <Button
            android:id="@+id/get_verify_btn"
            style="@style/CommonTextPrimary"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/w50"
            android:paddingRight="@dimen/w50"
            android:textColor="@color/textColorPink"
            android:text="@string/get_verify_code"
            android:background="@drawable/selector_comment_item"/>
    </LinearLayout>
    <View style="@style/DividerHorizontalLine" />
    <EditText
        android:id="@+id/set_psd_et"
        style="@style/CommentEditStyle"
        android:hint="@string/please_set_psd"
        />
    <View style="@style/DividerHorizontalLine" />
    <LinearLayout
        style="@style/CommentLinearLayoutStyle"
        android:paddingLeft="@dimen/w50"
        >
        <TextView
            style="@style/TextBlank.Medium"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/textColorSecondary"
            android:text="@string/register_protocol_agree"/>
        <TextView
            android:id="@+id/agree_protocol_tv"
            style="@style/TextBlank.Medium"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/text_pink_selector"
            android:text="@string/user_protocol"/>
    </LinearLayout>

    <LinearLayout
        style="@style/CommentLinearLayoutStyle"
        android:paddingLeft="@dimen/w50"
        android:layout_marginTop="@dimen/h130"
        android:gravity="center"
        >
        <TextView
            style="@style/TextBlank.Large"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/textColorSecondary"
            android:text="@string/had_account"/>
        <TextView
            android:id="@+id/login_direct_tv"
            style="@style/TextBlank.Large"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/text_pink_selector"
            android:text="@string/login_direct"/>
    </LinearLayout>
</LinearLayout>