<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_new_psd_et"
        style="@style/CommentEditStyle"
        android:inputType="textPassword"
        android:hint="@string/please_input_new_psd_tip"
        />
    <View style="@style/DividerHorizontalLine" />
    <EditText
        android:id="@+id/input_new_psd_again_et"
        style="@style/CommentEditStyle"
        android:inputType="textPassword"
        android:hint="@string/please_input_new_psd_again"
        />
    <View style="@style/DividerHorizontalLine" />
    <Button
        android:id="@+id/reset_psd_btn"
        style="@style/CommentButtonStyle"
        android:text="@string/reset_psd"
        />
</LinearLayout>